# isopod

./: .gitignore  MANIFEST.in  README.md  constants.pyx  main.c  monitorize.py  pyproject.toml  setup.py
.github/workflows/: build-wheel.yml
cdrom/: __init__.py
extras/epd-images/: README.txt  copying.xcf  failure.xcf  insert.xcf  oob.xcf  success.xcf  systemfail.xcf  unreadable.xcf  wait.xcf
extras/systemd/: isopod-connected.service  isopod-setupfail.service  isopod-shutdown.service  isopod-systemfail.service  isopod-systemfail.timer  isopod.service
isopod/: __init__.py  controller.py  daemon.py  db.py  journal.py  linux.py  logging.py  os.py  registry.py  ripper.py  scripts.py  sender.py  store.py  tool.py  trigger.py
isopod/cdrom/: .gitignore  __init__.py  constants.pyx
isopod/epd/: display.py  limit.py  reporter.py
isopod/epd/images/: __init__.py
src/isopod/: __init__.py  cdrom.py  controller.py  daemon.py  db.py  linux.py  newripper.py  newsender.py  oldsender.py  reporter.py  ripper.py  scripts.py  sender.py  sender2.py  store.py  udev.py
src/isopod/cdrom/: __init__.py
src/isopod/epd/: __init__.py  cli.py  display.py  limit.py  reporter.py
