[project]
name = "isopod"
version = "0.0.1"
description = "Rip ISOs to remote storage with minimal fuss"
requires-python = ">=3.11"
authors = [{ name = "Alex Hamlin", email = "alex@alexhamlin.co" }]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["pyudev>=0.24.1"]

[project.scripts]
isopod = "isopod:main"
isopod-monitor = "isopod.tool:monitor"
isopod-status = "isopod.tool:status"

[build-system]
requires = ["setuptools>=61.0", "Cython>=3"]
build-backend = "setuptools.build_meta"
