[project]
name = "isopod"
version = "0.0.2"
description = "Rip ISOs to remote storage with minimal fuss"
requires-python = ">=3.11"
authors = [{ name = "Alex Hamlin", email = "alex@alexhamlin.co" }]
dependencies = [
  "click>=8.1.7",
  "pyudev>=0.24.1",
  "SQLAlchemy>=2.0.24",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
  "Topic :: System :: Archiving :: Backup",
]

[project.scripts]
isopod = "isopod.daemon:main"
isopod-epd = "isopod.epd.cli:cli"
isopod-script = "isopod.scripts:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
